src/test/deca/syntax/invalid/include_cycle_3_1.deca

#include "src/test/deca/syntax/invalid/include_cycle_3_2.deca"